syntax = "proto3";

package accounts;

option go_package = "github.com/radmickey/money-control/backend/proto/accounts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AccountsService {
  rpc CreateAccount(CreateAccountRequest) returns (Account);
  rpc GetAccount(GetAccountRequest) returns (Account);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc UpdateAccount(UpdateAccountRequest) returns (Account);
  rpc DeleteAccount(DeleteAccountRequest) returns (google.protobuf.Empty);

  rpc CreateSubAccount(CreateSubAccountRequest) returns (SubAccount);
  rpc GetSubAccount(GetSubAccountRequest) returns (SubAccount);
  rpc ListSubAccounts(ListSubAccountsRequest) returns (ListSubAccountsResponse);
  rpc UpdateSubAccount(UpdateSubAccountRequest) returns (SubAccount);
  rpc DeleteSubAccount(DeleteSubAccountRequest) returns (google.protobuf.Empty);
  rpc UpdateSubAccountBalance(UpdateSubAccountBalanceRequest) returns (SubAccount);

  rpc GetUserNetWorth(GetUserNetWorthRequest) returns (NetWorthResponse);
  rpc GetAccountsSummary(GetAccountsSummaryRequest) returns (AccountsSummaryResponse);
}

enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  ACCOUNT_TYPE_BANK = 1;
  ACCOUNT_TYPE_CASH = 2;
  ACCOUNT_TYPE_INVESTMENT = 3;
  ACCOUNT_TYPE_CRYPTO = 4;
  ACCOUNT_TYPE_REAL_ESTATE = 5;
  ACCOUNT_TYPE_OTHER = 6;
}

enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_BANK = 1;
  ASSET_TYPE_CASH = 2;
  ASSET_TYPE_STOCKS = 3;
  ASSET_TYPE_CRYPTO = 4;
  ASSET_TYPE_ETF = 5;
  ASSET_TYPE_REAL_ESTATE = 6;
  ASSET_TYPE_BONDS = 7;
  ASSET_TYPE_OTHER = 8;
}

message Account {
  string id = 1;
  string user_id = 2;
  string name = 3;
  AccountType type = 4;
  string currency = 5;
  double total_balance = 6;
  string description = 7;
  string icon = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  repeated SubAccount sub_accounts = 11;
}

message SubAccount {
  string id = 1;
  string account_id = 2;
  string name = 3;
  AssetType asset_type = 4;
  string currency = 5;
  double balance = 6;
  string symbol = 7;
  double quantity = 8;
  string description = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreateAccountRequest {
  string user_id = 1;
  string name = 2;
  AccountType type = 3;
  string currency = 4;
  string description = 5;
  string icon = 6;
}

message GetAccountRequest {
  string id = 1;
  string user_id = 2;
}

message ListAccountsRequest {
  string user_id = 1;
  AccountType type = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateAccountRequest {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  string icon = 5;
  string currency = 6;
}

message DeleteAccountRequest {
  string id = 1;
  string user_id = 2;
}

message CreateSubAccountRequest {
  string account_id = 1;
  string user_id = 2;
  string name = 3;
  AssetType asset_type = 4;
  string currency = 5;
  double balance = 6;
  string symbol = 7;
  double quantity = 8;
  string description = 9;
}

message GetSubAccountRequest {
  string id = 1;
  string user_id = 2;
}

message ListSubAccountsRequest {
  string account_id = 1;
  string user_id = 2;
  AssetType asset_type = 3;
}

message ListSubAccountsResponse {
  repeated SubAccount sub_accounts = 1;
}

message UpdateSubAccountRequest {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  double balance = 5;
  double quantity = 6;
}

message DeleteSubAccountRequest {
  string id = 1;
  string user_id = 2;
}

message UpdateSubAccountBalanceRequest {
  string id = 1;
  string user_id = 2;
  double balance = 3;
  double quantity = 4;
}

message GetUserNetWorthRequest {
  string user_id = 1;
  string base_currency = 2;
}

message NetWorthResponse {
  double total_net_worth = 1;
  string currency = 2;
  map<string, double> by_account_type = 3;
  map<string, double> by_asset_type = 4;
  google.protobuf.Timestamp calculated_at = 5;
}

message GetAccountsSummaryRequest {
  string user_id = 1;
}

message AccountsSummaryResponse {
  int32 total_accounts = 1;
  int32 total_sub_accounts = 2;
  repeated AccountTypeSummary by_type = 3;
}

message AccountTypeSummary {
  AccountType type = 1;
  int32 count = 2;
  double total_balance = 3;
  string currency = 4;
}

